# ant

./: .buildinfo  .gitignore  .gitlab-ci.yml  .travis.yml  CMakeLists.txt  CMakeLists_8txt.html  README.md  annotated.html  arrayUtil_8cpp.html  arrayUtil_8cpp__incl.dot  arrayUtil_8h.html  arrayUtil_8h__dep__incl.dot  arrayUtil_8h__incl.dot  array_8cpp.html  array_8cpp__incl.dot  array_8h.html  array_8h__dep__incl.dot  array_8h__incl.dot  broadCasted_8cpp.html  broadCasted_8cpp__incl.dot  broadCasted_8h.html  broadCasted_8h__dep__incl.dot  broadCasted_8h__incl.dot  classHello-members.html  classHello.html  classes.html  classndarray_1_1Array-members.html  classndarray_1_1Array.html  classndarray_1_1exception_1_1AxisOutOfRangeException-members.html  classndarray_1_1exception_1_1AxisOutOfRangeException.html  classndarray_1_1exception_1_1AxisOutOfRangeException__inherit__graph.dot  classndarray_1_1exception_1_1IndexOutOfRangeException-members.html  classndarray_1_1exception_1_1IndexOutOfRangeException.html  classndarray_1_1exception_1_1IndexOutOfRangeException__coll__graph.dot  classndarray_1_1exception_1_1InvalidShapeException-members.html  classndarray_1_1exception_1_1InvalidShapeException.html  classndarray_1_1exception_1_1InvalidShapeException__inherit__graph.dot  classndarray_1_1exception_1_1InvalidSizeException-members.html  classndarray_1_1exception_1_1InvalidSizeException.html  classndarray_1_1exception_1_1InvalidSizeException__inherit__graph.dot  (+81 more)
.circleci/: config.yml
.github/workflows/: build.yml  ci_build.yml
.githubnotnow/workflows/: build.yml
DockerFile/ci/: Dockerfile  README.md
DockerImage/: Dockerfile  Dockerfile22  start.sh
_sources/: index.rst.txt
_sources/api/ndarray/: index.rst.txt
_sources/api/ndarray/core/: array.rst.txt  broadCasted.rst.txt  dataType.rst.txt  index.rst.txt  slices.rst.txt
_sources/api/ndarray/exception/: index.rst.txt  ndexception.rst.txt
_sources/api/ndarray/util/: index.rst.txt
_static/: documentation_options.js
api/: hello.html  index.html
api/ndarray/: index.html
api/ndarray/core/: array.html  broadCasted.html  dataType.html  index.html  slices.html
api/ndarray/cuda/: cudaWrapper.html  index.html
api/ndarray/exception/: index.html  ndexception.html
api/ndarray/util/: arrayUtil.html  index.html  util.html
docs_doxygen/: Doxyfile.in
docs_sphinx/: Doxyfile.in  conf.py
docs_sphinx/api/: hello.rst  index.rst
docs_sphinx/api/ndarray/: index.rst
docs_sphinx/api/ndarray/core/: array.rst
docs_sphinx/api/ndarray/cuda/: cudaWrapper.rst  index.rst
docs_sphinx/api/ndarray/util/: arrayUtil.rst  util.rst
not now circleci_/: config.yml
script/: coverage.sh  gcov_coverage.sh  sonar_build_wrapper.sh
scripts/: cuda_install.sh  gcov_coverage.sh  requirements.sh
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  files_0.js  files_1.js  files_2.js  files_3.js  files_4.js  files_5.js  files_6.js  functions_0.js  functions_1.js  functions_10.js  functions_11.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  (+18 more)
src/: CMakeLists.txt  bindings.cpp  constants.h  hello.cpp  hello.h  math.cpp
src/calculator/: calculator.hpp
src/ndarray/: CMakeLists.txt
src/ndarray/core/: Array.cpp  Array.h  array.cpp  array.h  broadCasted.cpp  broadCasted.h  dataType.h  slices.cpp  slices.h
src/ndarray/cuda/: CMakeLists.txt  addKernel.cu  cudaWrapper.h  matmulKernel.cu  slicesKernel.cu  util.cu  util.cuh
src/ndarray/exception/: CMakeLists.txt  ndexception.h
src/ndarray/util/: arrayUtil.cpp  arrayUtil.h  util.cpp  util.h
src/ops/: CMakeLists.txt  basic.cpp  basic.hpp
test/: CMakeLists.txt  testUtil.h
test/ndarray/: CMakeLists.txt
test/ndarray/core/: array.add.test.cpp  array.indexing.test.cpp  array.matmul.test.cpp  array.slices.test.cpp  array.test.cpp  array.transpose.test.cpp  broadCasted.getBroadCastedShape.test.cpp  broadCasted.test.cpp  slices.test.cpp
test/ndarray/exception/: CMakeLists.txt  ndexception.test.cpp
test/ndarray/util/: arrayUtil.test.cpp  util.test.cpp
tests/: CMakeLists.txt  math_test.cpp  math_test.py
tests/ops/: CMakeLists.txt  basic_test.cpp
